- MFH Fixed Bug #37457 (Crash when an exception is thrown in accept() method of FilterIterator)